# kitten

./: .gitignore  .mypy.ini  LICENSE  README.md  cats.ipynb  pyproject.toml  requirements.txt  setup.py  train_dqn.py  visualise.ipynb
cats/: .gitignore  README.md  __init__.py  cats.ipynb  cats.py  env.py  evaluation.py  logging.py  reset.py  rl.py  run.py  teleport.py
cats/config/: defaults.yaml
cats/evaluation/: __init__.py  evaluation.py  intrinsic.py
config/: ddpg.json  ddpg_mcc.json  ddpg_pendulum.json  defaults.yaml  dqn_classic.json  ppo.yaml  td3.json  td3_mcc.json  td3_pendulum.json
config/algorithm/: ddpg.yaml  dqn.yaml  qt_opt.yaml  td3.yaml
config/experiment/: bipedal_walker.yaml  cartpole.yaml  half_cheetah.yaml  hopper.yaml  mcc.yaml  pendulum.yaml
config/intrinsic/: disagreement.yaml  icm.yaml  none.yaml  rnd.yaml
config/memory/: er.yaml  per.yaml
config/noise/: e_greedy.yaml  pink.yaml  red.yaml  (+1 more)
curiosity/: __init__.py  collector.py  ddpg.py  experience.py  exploration.py  logging.py  nn.py  policy.py  rl.py  util.py  world.py
kitten/: __init__.py  logging.py  nn.py  policy.py
log/: README.md
notebooks/: cats.ipynb  epistemic.ipynb  unsupervised.ipynb  visualise.ipynb
scripts/: ddpg.json  ddpg.py  ddpg_hydra.py  ddpg_icm.py  dqn.py  dqn_atari.json  td3.json  td3.py  td3_icm.py  train.py  train_ddpg.py  train_ddpg_classic.py  train_dqn.py  train_dqn_classic.py  train_ppo.py  train_td3.py
test/: test_agent.py
tests/: test_experience.py  test_intrinsic.py  test_nn.py  test_util.py  test_world.py
util/: agent.py  experience.py
(+64 files in other folders)
