[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kitten"
version = "0.0.1"
authors = [
  { name="Hao Xiang Li", email="mark.haoxiang@gmail.com" },
]
description = "Part II Project - 2023"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["log*"]
